# golden-tests

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  goldentests.toml  rustfmt.toml
examples/: all_keywords.py  line_ending_difference.py  multiline.py  tab_difference.py
src/: config.rs  config_file.rs  diff_printer.rs  error.rs  lib.rs  main.rs  runner.rs
tests/: tests.rs
