[package]
name = "goldentests"
version = "0.3.8"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["testing", "tests", "golden"]
categories = ["development-tools::testing"]
description = "A golden file testing library where tests can be configured within the same test file"
homepage = "https://github.com/jfecher/golden-tests"
repository = "https://github.com/jfecher/golden-tests"
readme = "README.md"
documentation = "https://docs.rs/goldentests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
shlex = "1.0.0"
similar = "1.3.0"
