[package]
name = "goldentests"
version = "1.0.0"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["testing", "tests", "golden"]
categories = ["development-tools::testing"]
description = "A golden file testing library where tests can be configured within the same test file"
homepage = "https://github.com/jfecher/golden-tests"
repository = "https://github.com/jfecher/golden-tests"
readme = "README.md"
documentation = "https://docs.rs/goldentests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
shlex = "1.1.0"
similar = "2.1.0"
rayon = { version = "1.5.1", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]