[package]
name = "goldentests"
version = "1.3.3"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["testing", "tests", "golden"]
categories = ["development-tools::testing"]
description = "A golden file testing library where tests can be configured within the same test file"
homepage = "https://github.com/jfecher/golden-tests"
repository = "https://github.com/jfecher/golden-tests"
readme = "README.md"
documentation = "https://docs.rs/goldentests"

[lib]
name = "goldentests"

[[bin]]
name = "goldentests"
required-features = ["binary"]
doc = false

[dependencies]
colored = "3.0.0"
shlex = "1.3.0"
similar = "2.7.0"
rayon = { version = "1.5.1", optional = true }
indicatif = { version = "0.18.0", optional = true }

# clap is only needed for the goldentest binary,
# enabling it will have no effect on the library version
clap = { version = "3.0.14", features = ["derive"], optional = true }

[features]
default = ["parallel"]
binary = ["parallel", "progress-bar", "clap"]
parallel = ["rayon"]
progress-bar = ["indicatif"]
